Fixed the height issue on safari and ie on Holdings

--- a/public/scss/dimensions.scss
+++ b/public/scss/dimensions.scss
@@ -86,3 +86,7 @@
  .h-500px {
    height: 500px;
  }
+
+ .h-auto {
+   height: auto;
+ }
